--- a/src/Common.tex
+++ b/src/Common.tex
@@ -41,7 +41,7 @@
 
 \begin{equation}
 	a_{el}T_{\odot}^2 = 
-	\left(\cfrac{   \avarage{\sigma_{a}v}    }{3\cdot10^{-26} \text{cm}^2\text{s}^{-1}} \right)
+	2.6\cdot10^{-22} \text{s}	\left(\cfrac{   \avarage{\sigma_{a}v}    }{3\cdot10^{-26} \text{cm}^2\text{s}^{-1}} \right)
 	\left(\cfrac{m_{\chi}}{\text{GeV}}\right)^{3/2}
 \end{equation}
 
