--- a/src/Results.tex
+++ b/src/Results.tex
@@ -14,6 +14,7 @@
 		L = \cfrac{|\vec{r} \times \vec{v}|}
 		{R_{\odot} v_{esc}}
 	\end{split}
+	\label{eq:dimentionless}
 \end{equation}
 
 Еще одна величина --- приведенный момент импульса.
@@ -75,7 +76,7 @@
 	\end{axis}
 \end{tikzpicture}
 	\caption{Концентраця частиц тёмной материи массы $m_{\chi} = 100\text{GeV}$}
-	\label{eq:Nrdistrib}
+	\label{plot:Nrdistrib}
 \end{figure}
 
 Главный вопрос заключается в отношении скорости аннигиляции и скорости захвата $C/A$. Мы рассматриваем уравнение эволюции как с учётом аннигиляции так и без учета аннигиляции. 
@@ -110,7 +111,7 @@
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Зависимость от $\delta$ захвата и аннигиляции при линейной и нелинейной эволюции для $m_{\chi} = 100\text{GeV}$}
-	\label{eq:CaptAnn}
+	\label{plot:CaptAnn}
 \end{figure}
 
 Как можно заметить, если включить в уравнение эволюции аннигиляцию, то результат совпадает с оценкой (\ref{eq:AnnNtherm}). 
