--- a/src/CompDetails.tex
+++ b/src/CompDetails.tex
@@ -3,3 +3,90 @@
 %	Рисунок неравномерной решетки
 %	Схема дискретизации по времени
 %   Расчет с аннигиляцией
+Уравнение термализации (\ref{eq:evolution}) решается в безразмерном виде, где вводится относительное число частиц $\tilde{N}_i = N_i/N_{\odot}$, а также относительное время $\tau = t/T_{\chi p}$.
+
+Уравнение тогда примет вид:
+\begin{equation}
+	\label{eq:relevolve}
+	\deriv{\tilde{N}_i}{\tau} = c_i +
+	\sum_j{[s_{ij} \tilde{N}_{j} - s_{ji} \tilde{N}_{i} ]} - e_{i} \tilde{N}_i - a_{\gamma} \sum_j {a_{ij} \tilde{N}_j \tilde{N}_i}
+\end{equation}
+
+Для нахождения относительной концентрации $\tilde{n}(r)$ нужно взять сумму интегралов по всем бинам
+\begin{equation}
+	\label{eq:reldens}
+	\tilde{n}(r) = \sum_i{\int{\cfrac{4\pi}{3} \cfrac{1}{2\pi T(E,L)} \cfrac{d\tilde{N}_i}{dEdL^2} dE d\sqrt{v^2-\frac{L^2}{r^2}} }}
+\end{equation}
+
+Реальная концентрация тогда равна $n(r) = \tilde{n}(r) n_{\chi 0.4}$. 
+
+Здесь $E$ и $L$ --- энергия и момент импульса согласно (\ref{eq:dimentionless}). $T(E,L)$ --- время (обезразмеренное на $R_{\odot}/v_{esc}$) движения между минимальной и максимальной точками траектории $r_{min}$ и $r_{max}$.
+
+\begin{equation*}
+	T(E,L) = \int_{r_{min}}^{r_{max}}{\cfrac{dr}{
+			\sqrt{E - \varphi(r) - \frac{L^2}{r^2}}
+		} 
+	}
+\end{equation*}
+
+где $\varphi(r)$ --- определяет Ньютоновский потенциал:
+
+\begin{equation*}
+	\phi(r) = \cfrac{GM(r)}{r} = \varphi(r) \cfrac{v_{esc}^2}{2} 
+\end{equation*}
+
+$\varphi(r)$ удовлетворяет уравнению Пуассона:
+
+\begin{equation}
+	\cfrac{1}{r^2}\deriv{}{r}
+	\left(r^2\deriv{\varphi(r)}{r}\right) = 3\rho(r)
+\end{equation}
+
+где $\rho(r)$ --- отношение плотности к средней плотности из (\ref{eq:ca_coeff}).
+
+Матрица аннигилляции $a_{ij}$ из (\ref{eq:evolution}) равна
+
+\begin{equation}
+	a_{ij} = \int{3r^2dr \tilde{n}_i(r)\tilde{n}_j(r)}
+\end{equation}
+
+где $\tilde{n}_i(r)$ --- относительная концентрация из (\ref{eq:reldens}), посчитанная только для бина $i$.
+
+
+Для уравнения (\ref{eq:relevolve}) численно мы вводили переменную-вектор $\tilde{C}_{i}$ и решали следующее уравнение:
+
+\begin{equation}
+\begin{split}
+	\tilde{C}_i = \deriv{\tilde{N}_i}{\tau} \\
+	\deriv{\tilde{C}_i}{\tau} = S_{ij} \tilde{C}_{i} - a_{\gamma} [a_{ij} \tilde{N}_i \tilde{C}_{j} - a_{ij} \tilde{N}_j \tilde{C}_{i}] \\
+	\tilde{C}_i(0) = c_i
+\end{split}
+\end{equation}
+
+где матрица $S$ определяется так:
+\begin{equation}
+	S_{ij} = s_{ij} - \delta_{ij} \sum_{k}{s_{kj}} - \delta_{ij} e_{i}
+\end{equation}
+
+Для решения линейной части уравнения мы использовали неявную схему 2 порядка:
+
+\begin{equation}
+\begin{split}
+	\tilde{C}(\tau + h_{\tau}) = R_L(h_{\tau}) \tilde{C} \\
+	R_L(h_{\tau}) = \cfrac{2}{1 - \frac{h_{\tau}}{2}S} - \cfrac{1}{1 - h_{\tau}S}
+\end{split}
+\end{equation}
+
+Нелинейные эффекты можно оценить схемой 1 порядка:
+
+\begin{equation}
+	\begin{split}
+		\tilde{C}(\tau + h_{\tau}) = R_{NL}(h_{\tau}) R_L(h_{\tau}) \tilde{C} \\
+		[R_{NL}(h_{\tau}) C]_i = e^{-h_{\tau} a_{\gamma} \sum_j{a_{ij}\tilde{N}_j} } (\delta_{ik} - h_{\tau} a_{\gamma} [a_{ik}\tilde{N}_i - \delta_{ik}\sum_{m}{a_{im}\tilde{N}_m}])
+		e^{-h_{\tau} a_{\gamma} \sum_j{a_{kj}\tilde{N}_j} } \tilde{C}_k
+	\end{split}
+\end{equation}
+
+
+
+
