--- a/src/Results.tex
+++ b/src/Results.tex
@@ -116,5 +116,18 @@
 
 Как можно заметить, если включить в уравнение эволюции аннигиляцию, то результат совпадает с оценкой (\ref{eq:AnnNtherm}). 
 
+Обозначим величину $1/(aT_{\odot}^2)$ как $С_a(\avarage{\sigma_a v})$. Тогда для того чтобы сдлать ограничения для сечения на протоне $\sigma_{\chi p}$ исходя из ограничения на темп аннигиляции $\Gamma$ нужно решить (\ref{eq:AnnNtherm}) и найти темп захвата.
+
+\begin{equation}
+	\cfrac{2\Gamma}{C_a} = 
+	F\left(\cfrac{C}{C_a}\right)
+\end{equation}
+
+где $F(x) = x\th^2{\sqrt(x)}$. Для оценки с точностью $0.06$ можно использовать $F^{-1}(y) \approx \sqrt{y(1+y)}$.
+
+Тогда, зная $C/C_a$ и $C(\sigma_{\chi p,0})$ --- захват при $\sigma_{\chi p} = \sigma_{\chi p, 0}$ можно найти ограничение для сечения $\sigma_{\chi p}$
+\begin{equation}
+	\sigma_{\chi p} = \sigma_{\chi p, 0} \cfrac{C_a}{C(\sigma_{\chi p,0})} F^{-1}\left(	\cfrac{2\Gamma}{C_a}\right)
+\end{equation}
 
 
