--- a/src/Common.tex
+++ b/src/Common.tex
@@ -25,7 +25,7 @@
 	\right)^2}
 \end{equation}
 
-В случае, когда масса тёмной материи больше $10$ GeV, температуру термального распределения $T_{\chi}$ можно взять равной температуре в центре Солнца $T_{\odot}(r=0) = 1.33\cdot10^{-6} \text{GeV}$, а потенциал $\phi(r)$ разложить до квадратичного порядка: $\phi(r) =\phi(0)+ \frac{v_{esc}^2}{2} \rho_0 \frac{r^2}{R_{\odot}^2} + o(r^2)$,  где $\rho_0 = 105.7$. Тогда
+В случае, когда масса тёмной материи больше $10$ GeV, температуру термального распределения $T_{\chi}$ можно взять равной температуре в центре Солнца $T_{\odot}(r=0) = 1.33\cdot10^{-6} \text{GeV}$, а потенциал $\phi(r)$ разложить до квадратичного порядка: $\phi(r) =\phi(0)+ \frac{v_{esc}^2}{2} \frac{\rho_0}{2} \frac{r^2}{R_{\odot}^2} + o(r^2)$,  где $\rho_0 = 105.7$. Тогда
 
 \begin{equation}
 	a_{el} = \cfrac{1}{(4\pi)^{3/2}} \cfrac{\avarage{\sigma_{a}v}}{ r_{\chi}^3 }
@@ -34,14 +34,14 @@
 где
 
 \begin{equation}
-	r_{\chi} = R_{\odot} \sqrt{\cfrac{T_{\odot}(0) }{m_{\chi}\rho_0 v_{esc}^2}} =  0.0545 R_{\odot} \sqrt{\cfrac{ \text{GeV}}{m_{\chi}}}
+	r_{\chi} = R_{\odot} \sqrt{\cfrac{2 T_{\odot}(0) }{m_{\chi}\rho_0 v_{esc}^2}} =  0.077 R_{\odot} \sqrt{\cfrac{ \text{GeV}}{m_{\chi}}}
 \end{equation}
 
 Приведём значение для $a_{el}t^2$ в момент возраста Солнца $T_{\odot}$
 
 \begin{equation}
 	a_{el}T_{\odot}^2 = 
-	2.6\cdot10^{-22} \text{s}	\left(\cfrac{   \avarage{\sigma_{a}v}    }{3\cdot10^{-26} \text{cm}^2\text{s}^{-1}} \right)
+	9\cdot10^{-23} \text{s}	\left(\cfrac{   \avarage{\sigma_{a}v}    }{3\cdot10^{-26} \text{cm}^2\text{s}^{-1}} \right)
 	\left(\cfrac{m_{\chi}}{\text{GeV}}\right)^{3/2}
 \end{equation}
 
