--- a/src/Capture.tex
+++ b/src/Capture.tex
@@ -5,7 +5,7 @@
 \begin{equation}
 	\label{eq:Capture_Full}
 	C = \sum_{\alpha} C_{\alpha} = \sum_{\alpha} \int{
-		d^3\vec{x} \cdot d^3\vec{v} f(v^2,r) \cdot n_{\alpha}(r) 
+		d^3\vec{x} \cdot d^3\vec{v} \cdot f(v^2,r) \cdot n_{\alpha}(r) 
 		d^3\vec{v}_{\alpha} f_B(v_{\alpha},T(r)) \cdot
 		|\vec{v}- \vec{v}_{\alpha}| d\sigma_{\chi \alpha}
 	}
