--- a/src/Common.tex
+++ b/src/Common.tex
@@ -3,6 +3,7 @@
 Уравнение на полное число частиц выглядит следующим образом:
 
 \begin{equation}
+	\label{eq:Balance}
 	\tderiv{N} = C - aN^2
 \end{equation}
 
