--- a/src/Conv.tex
+++ b/src/Conv.tex
@@ -79,7 +79,8 @@
 	\label{plot:ConvEl10}
 \end{figure}
 
-В неупругом случае мы рассматривали сетки с разбиением по $E$ и $L$ на $50$,$100$ и $200$ равномерных отрезков.
+В неупругом случае мы рассматривали сетки с разбиением по $E$ и $l$ на $50$,$100$ и $200$ равномерных отрезков.
+Величина аннигиляции почти не зависела от $h_e$ и демонстрировала линейную сходимость по $h_l$
 
 
 
@@ -104,9 +105,9 @@
 			\addplot table [x={h}, y={nl1}]{tables/ConvInel_E.csv};
 			\addplot table [x={h}, y={nl2}]{tables/ConvInel_E.csv};
 			\legend{ 
-				{$h_L = 1\ \ \ $},
-				{$h_L = 1/2$},
-				{$h_L = 1/4$}
+				{$h_l = 1\ \ \ $},
+				{$h_l = 1/2$},
+				{$h_l = 1/4$}
 			};
 		\end{axis}
 		\begin{axis}[
@@ -115,7 +116,7 @@
 			height=0.4\textwidth,
 			table/col sep = semicolon,
 			xmin=0,
-			xlabel = { \(h_L (1 = L_{max}/50) \)},
+			xlabel = { \(h_l (1 = L_{max}/50) \)},
 			ylabel = {\(A/A_{1/4,1/4}\)},
 			legend style={
 				at = {(0.2,0.98)},
