--- a/src/Termalization.tex
+++ b/src/Termalization.tex
@@ -1,4 +1,49 @@
-Когда тёмная материя захваттывается, она далее испытывает вторичные столкновения с веществом и аннигиляцию. Её эволюция описывается уравнением Больцмана. Для решения этого уравнения мы переходим из пространства $\vec{r}-\vec{v}$ в пространство $E-L$, где $E$ --- энергия тёмной материи, а $L$ --- момент импульса. Мы разбиваем пространство на бины, и тогда уравнение эволюции на число частиц $N_{i}$ в бине $i$ будет иметь вид:
+Когда тёмная материя захватывается, она далее испытывает вторичные столкновения с веществом и аннигиляцию. Её эволюция описывается уравнением Больцмана на функцию распределения $f(\vec{r},\vec{v})$:
+
+\begin{equation}
+	\label{eq:Boltsman}
+	\deriv{f}{t}(\vec{r},\vec{v}) + \vec{v} \deriv{f}{\vec{r}}(\vec{r},\vec{v}) - \nabla \phi \deriv{f}{\vec{v}}(\vec{r},\vec{v}) = 
+	St[f] (\vec{r},\vec{v})
+\end{equation} 
+где $St[f]$ --- интеграл столкновений. Этот член значительно меньше левой части уравнения (что следует из того, что длина свободного пробега частицы $\chi$ значительно превышает размер Солнца). Следовательно, для решения этого уравнения нужно перейти из пространства $\vec{r}-\vec{v}$ в пространство $E-L$, где $E$ --- энергия тёмной материи, а $L$ --- момент импульса. Линейная часть уравнение Больцмана, связанная с рассеяниям на ядрах, имеет вид:
+
+\begin{equation}
+	\label{eq:BoltsmanEL}
+	\deriv{f}{t}(E,L) = C(E,L) + \int{ S(E_i,L_i,E,L) f(E_i,L_i) dE_idL_i } 
+	-f(E,L) \int{ S(E,L,E_f,L_f)  dE_fdL_f }
+\end{equation}
+
+В уравнение входят также член, отвечающий за аннигиляцию, и член, отвечающий за рассеяние частиц тёмной материи на самой себе, который в данной работе считается малым по сравнениею с аннигиляцией и не учитывается.
+
+Для учёта аннигиляции в (\ref{eq:BoltsmanEL}) добавляется 
+\begin{equation}
+	-\label{eq:BoltsmanAnn}
+	f(E,L) \int{ A(E,L,E',L') f(E',L') dE'dL' }
+\end{equation}
+
+Для удобства, мы используем безразмерные величины энергии $E$ и момента импульса $L$, которые определены следующим образом:
+\begin{equation}
+	\begin{split}
+		E = \cfrac{\frac{1}{2} v_{\chi}^2 + \phi(r)}
+		{\frac{1}{2} v_{esc}^2} \\
+		L = \cfrac{|\vec{r} \times \vec{v}|}
+		{R_{\odot} v_{esc}}
+	\end{split}
+	\label{eq:dimentionless}
+\end{equation}
+
+Еще одна величина --- приведенный момент импульса.
+\begin{equation}
+	l = \cfrac{L}{L_{max}(E)}
+\end{equation}
+
+где $L_{max}(E)$ --- максимально возможный момент импулься траектории при данной энергии (при этом не учитываются траектории, которые находятся вне Солнца).
+
+
+
+Для численного решения уравнения мы разбиваем пространство на прямоугольные бины по величинам энергии $E$ и приведенного момента $l$. Внутри бина мы считаем, что частицы распределены относительно какой-то меры: это может быть $d\Phi = dEdL$ либо $d\Phi = dEdL^2$ (мы используем второй вариант). 
+
+Eравнение эволюции на число частиц $N_{i}$ в бине $i$ будет иметь вид:
 
 \begin{equation}
 	\label{eq:evolution}
@@ -7,21 +52,44 @@
 \end{equation}
 
 Величины $c_i$ определяются из интеграла (\ref{eq:ca_coeff}), но интеграл ограничивается областью, в которой конечные $E$ и $L$ частицы попадают в бин $i$.
-Величины $s_{ij}$ определяют вероятности переёти из бина $j$ в бин $i$ и вычисляются аналогично $c_{i}$
+Величины $s_{ij}$ определяют вероятности переёти из бина $j$ в бин $i$ и вычисляются аналогично $c_{i}$. Как $c_{i}$ так  $s_{ij}$ мы вычисляем методом Монте-Карло.
 
 \begin{equation}
 	\label{eq:st_integral}
 	s_{ij} = \sum_{\alpha}\int{
-		d\Phi_{j}
+		\cfrac{d\Phi_{j}}{\mu(\Phi_{j})}
 		\cfrac{T_{in}(\Phi_{j})}{
 			T_{in}(\Phi_{j})+T_{out}(\Phi_{j})
 		} \cdot d\tau \left[ f_B(v_{\alpha}) d^3 \vec{v}_{\alpha} \right] \cdot \cfrac{v'}{v_{esc}} F(q,v) \cfrac{d\Omega}{4\pi}
 	}
 \end{equation}
 
-\noindent Интеграл $d\Phi_{j}$ обозначает интегрирование по фазовому объёму бина $j$, причём полный интеграл $\int{d\Phi_{j}} = 1$ равен $1$. В выражении присутствует интегрирование вдоль траектории движения частицы в потенциале $\phi(r)$: $T_{in} + T_{out}$ --- время, за которое частицы проходит от минимального $r_{min}$ до максимального $r_{max}$ положения. Это время разбивается на время пребывания внутри Солнца $T_{in}$ и Снаружи $T_{out}$. Соответственно величина $\tau$ параметризует внутреннюю части траектории и пробегает от $0$ до $1$.
+\noindent Интеграл $d\Phi_{j}$ обозначает интегрирование по фазовому объёму бина $j$, причём $\mu(\Phi_{j}) = \int{d\Phi_{j}}$ равен $1$. В выражении присутствует интегрирование вдоль траектории движения частицы в потенциале $\phi(r)$. Величина $\tau$ параметризует внутреннюю части траектории и пробегает от $0$ до $1$. $T_{in} + T_{out}$ --- время, за которое частицы проходит от минимального $r_{min}$ до максимального $r_{max}$ положения. Это время разбивается на время пребывания внутри Солнца $T_{in}$ и Снаружи $T_{out}$. Мы используем также обезразмеренное время на $R_{\odot}/v_{esc}$.
 
-Те частицы, которые не попали ни в какой бин $i$ в интеграле (\ref{eq:st_integral}) испаряются, что определяет величину $e_i$.
+\begin{equation*}
+	T(E,L) = \int_{r_{min}}^{r_{max}}{\cfrac{dr}{
+			\sqrt{E - \varphi(r) - \frac{L^2}{r^2}}
+		} 
+	}
+\end{equation*}
+
+где $\varphi(r)$ --- определяет Ньютоновский потенциал:
+
+\begin{equation*}
+	\phi(r) = \cfrac{GM(r)}{r} = \varphi(r) \cfrac{v_{esc}^2}{2} 
+\end{equation*}
+
+$\varphi(r)$ удовлетворяет уравнению Пуассона:
+
+\begin{equation}
+	\cfrac{1}{r^2}\deriv{}{r}
+	\left(r^2\deriv{\varphi(r)}{r}\right) = 3\rho(r)
+\end{equation}
+
+где $\rho(r)$ --- отношение плотности к средней плотности из (\ref{eq:ca_coeff}).
+
+
+Те частицы, которые не попали ни в какой бин $i$ в интеграле (\ref{eq:st_integral}) испаряются, что определяет величину $e_i$, т.е. $e_i$ = $s_{i'i}$, где $i'$ --- формальный индекс бина: $(E,l) \in [0,+\infty]\times[0,1]$.
 
 Коэффициент $a_{\gamma}$ определяет соотношения скорости аннигиляции и столкновений и равен:
 
