--- a/src/CompDetails.tex
+++ b/src/CompDetails.tex
@@ -12,7 +12,7 @@
 	\sum_j{[s_{ij} \tilde{N}_{j} - s_{ji} \tilde{N}_{i} ]} - e_{i} \tilde{N}_i - a_{\gamma} \sum_j {a_{ij} \tilde{N}_j \tilde{N}_i}
 \end{equation}
 
-Для нахождения относительной концентрации $\tilde{n}(r)$ нужно взять сумму интегралов по всем бинам
+Для нахождения относительной концентрации $\tilde{n}(r)$ мы считаем сумму интегралов по всем бинам методом Монте-Карло
 \begin{equation}
 	\label{eq:reldens}
 	\tilde{n}(r) = \sum_i{\int{\cfrac{4\pi}{3} \cfrac{1}{2\pi T(E,L)} \cfrac{d\tilde{N}_i}{dEdL^2} dE d\sqrt{v^2-\frac{L^2}{r^2}} }}
@@ -20,29 +20,7 @@
 
 Реальная концентрация тогда равна $n(r) = \tilde{n}(r) n_{\chi 0.4}$. 
 
-Здесь $E$ и $L$ --- энергия и момент импульса согласно (\ref{eq:dimentionless}). $T(E,L)$ --- время (обезразмеренное на $R_{\odot}/v_{esc}$) движения между минимальной и максимальной точками траектории $r_{min}$ и $r_{max}$.
-
-\begin{equation*}
-	T(E,L) = \int_{r_{min}}^{r_{max}}{\cfrac{dr}{
-			\sqrt{E - \varphi(r) - \frac{L^2}{r^2}}
-		} 
-	}
-\end{equation*}
-
-где $\varphi(r)$ --- определяет Ньютоновский потенциал:
-
-\begin{equation*}
-	\phi(r) = \cfrac{GM(r)}{r} = \varphi(r) \cfrac{v_{esc}^2}{2} 
-\end{equation*}
-
-$\varphi(r)$ удовлетворяет уравнению Пуассона:
-
-\begin{equation}
-	\cfrac{1}{r^2}\deriv{}{r}
-	\left(r^2\deriv{\varphi(r)}{r}\right) = 3\rho(r)
-\end{equation}
-
-где $\rho(r)$ --- отношение плотности к средней плотности из (\ref{eq:ca_coeff}).
+Здесь $E$ и $L$ --- энергия и момент импульса согласно (\ref{eq:dimentionless}). 
 
 Матрица аннигилляции $a_{ij}$ из (\ref{eq:evolution}) равна
 
