--- a/preamble.tex
+++ b/preamble.tex
@@ -5,8 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{indentfirst}
 
-
-
+\usepackage{url}
 
 
 \frenchspacing   
@@ -16,7 +15,7 @@
 \usepackage[hidelinks]{hyperref}
 
 \usepackage{icomma}                                    % "Умная" запятая
-\usepackage{NiceMatrix}
+%\usepackage{NiceMatrix}
 
 \usepackage{physics}
 \usepackage{slashed}
