--- a/src/Capture.tex
+++ b/src/Capture.tex
@@ -33,7 +33,7 @@
 	\right] \cdot F(q,v) \cfrac{v'}{v_{esc}} \cdot \cfrac{d \Omega}{4\pi} 
 \end{equation}
 
-где: $r$ обозначает безразмерный радиус, меняющийся от $0$ до $1$, $\rho(r)$ --- плотность вещества, нормированная согласно $\int \rho(r) 3r^2 dr = 1$, $\tilde{\rho}_{\alpha}(r)$ --- массовая доля элемента $\alpha$ в точке $r$, $A_{\alpha}$ --- число нуклонов в ядре, $v'$ --- разность скоростей тёмной материи и ядра после столкновения. $f_{eff}(u)$ --- распределение частиц тёмной материи вдали от Солнца с учётом движения солнца со скоростью $u_0$ (скорость тёмной материи вдали Солнца $u$ и скорость $v$ в точке $r$ связанны соотношением $v^2 = u^2 + v_{esc}^2(r)$)
+где: $r$ обозначает безразмерный радиус, меняющийся от $0$ до $1$, $\rho(r)$ --- плотность вещества, нормированная согласно $\int \rho(r) 3r^2 dr = 1$, $\tilde{\rho}_{\alpha}(r)$ --- массовая доля элемента $\alpha$ в точке $r$ (определяются из модели солнца AGSS09met \cite{SolarModel_2017}), $A_{\alpha}$ --- число нуклонов в ядре, $v'$ --- разность скоростей тёмной материи и ядра после столкновения. $f_{eff}(u)$ --- распределение частиц тёмной материи вдали от Солнца с учётом движения солнца со скоростью $u_0$ (скорость тёмной материи вдали Солнца $u$ и скорость $v$ в точке $r$ связанны соотношением $v^2 = u^2 + v_{esc}^2(r)$)
 
 \begin{equation}
 	f_e(u^2) = \int_{-1}^1 {f(u^2+u^2_0 + 2 u u_0 \cos{\theta}) \cfrac{d\cos{\theta}}{2}}
