--- a/src/Termalization.tex
+++ b/src/Termalization.tex
@@ -15,6 +15,8 @@
 
 В уравнение входят также член, отвечающий за аннигиляцию, и член, отвечающий за рассеяние частиц тёмной материи на самой себе, который в данной работе считается малым по сравнениею с аннигиляцией и не учитывается.
 
+Величины $C(E,L)$ и $S(E,L,E',L')$ вычисляются как интегралы столкновений (\ref{eq:ca_coeff}) и (\ref{eq:st_integral}) но с добавлением $\delta$-функций по $E$ и $L$.
+
 Для учёта аннигиляции в (\ref{eq:BoltsmanEL}) добавляется 
 \begin{equation}
 	-\label{eq:BoltsmanAnn}
